# Parser_vacancies

./: README.md  main.py  pyproject.toml  validator.py
classes/: connector.py  engine_classes.py  jobs_classes.py
tests/: test_connector_json.py  test_jobs_classes.py  test_utils.py
utils/: utils.py  utils_menu.py
